force-app/main/default/objects/Quote_Name_Relationship__c/Quote_Name_Relationship__c.object-meta.xml
<CustomObject>
    <label>Quote  Name Relationship</label>
    <nameField>
        <displayFormat>QNR-{000000}</displayFormat>
        <label>Quote  Name Relationship Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote  Name Relationship</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>