force-app/main/default/objects/Quote_Name_Relationship__c/fields/Lang_Text__c.field-meta.xml
<CustomField>
    <fullName>Lang_Text__c</fullName>
    <label>Language Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>