force-app/main/default/objects/Quote_Name_Relationship__c/fields/Product_English_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_English_Name__c</fullName>
    <formula>Products__r.English_Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product English Description</label>
    <type>Text</type>
</CustomField>