force-app/main/default/objects/Quote_Name_Relationship__c/fields/Products__c.field-meta.xml
<CustomField>
    <fullName>Products__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Product</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Quote Name Relationship</relationshipLabel>
    <relationshipName>Quote_Name_Relationship</relationshipName>
    <type>Lookup</type>
</CustomField>