force-app/main/default/objects/Quote_Name_Relationship__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Quote_Name__c</columns>
    <columns>Products__c</columns>
    <columns>Product_English_Name__c</columns>
    <columns>External_Id__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>